Upcoming:
- Fixed some bad descriptions (effectId -> effect)

1.18-1.0.0:
- Fancy Trinkets!
