@@ -9,6 +9,7 @@
     "fancytrinkets:absorption_ring",
     "fancytrinkets:base_gold_ring",
     "fancytrinkets:slowfalling_feather",
+    "fancytrinkets:grow_charm",
     "fancytrinkets:flight_star",
     "fancytrinkets:lightness_ring",
     "fancytrinkets:warp_pearl",
